<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".SharedPrefsActivity">

    <EditText
        android:id="@+id/et_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/enter_any_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@+id/et_data"
        app:layout_constraintStart_toStartOf="@+id/et_data"
        app:layout_constraintTop_toBottomOf="@+id/et_data" />

    <Button
        android:id="@+id/bt_save_encrypted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/save_encrypted"
        app:layout_constraintEnd_toEndOf="@+id/et_data"
        app:layout_constraintStart_toStartOf="@+id/et_data"
        app:layout_constraintTop_toBottomOf="@+id/bt_save" />

    <TextView
        android:id="@+id/tv_stored_values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/stored_values"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_save_encrypted" />

    <TextView
        android:id="@+id/tv_normal_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_stored_values"
        tools:text="@string/value_x" />

    <TextView
        android:id="@+id/tv_encrypted_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_normal_value"
        tools:text="@string/value_jetpack_x" />

</androidx.constraintlayout.widget.ConstraintLayout>